--- a/Strings/Resources.resw
+++ b/Strings/Resources.resw
@@ -136,7 +136,7 @@
     <value>热门壁纸</value>
   </data>
   <data name="BtnAbout.Text" xml:space="preserve">
-    <value>拾光 v2.0</value>
+    <value>拾光 v2.1</value>
   </data>
   <data name="BtnBingLang.Text" xml:space="preserve">
     <value>地区</value>
@@ -162,28 +162,19 @@
   <data name="BtnContact.Text" xml:space="preserve">
     <value>nguaduot@163.com</value>
   </data>
-  <data name="BtnCoolapkCate.Text" xml:space="preserve">
-    <value>类别</value>
-  </data>
-  <data name="BtnCoolapkCate1.Text" xml:space="preserve">
-    <value>随机</value>
-  </data>
-  <data name="BtnCoolapkCate2.Text" xml:space="preserve">
-    <value>风光摄影</value>
-  </data>
-  <data name="BtnCoolapkCate3.Text" xml:space="preserve">
+  <data name="BtnTimelineCate3.Text" xml:space="preserve">
     <value>人像摄影</value>
   </data>
-  <data name="BtnCoolapkCate4.Text" xml:space="preserve">
+  <data name="BtnTimelineCate4.Text" xml:space="preserve">
     <value>人文摄影</value>
   </data>
-  <data name="BtnCoolapkOrder.Text" xml:space="preserve">
+  <data name="BtnTimelineOrder.Text" xml:space="preserve">
     <value>排序</value>
   </data>
-  <data name="BtnCoolapkOrder1.Text" xml:space="preserve">
+  <data name="BtnTimelineOrder1.Text" xml:space="preserve">
     <value>日期</value>
   </data>
-  <data name="BtnCoolapkOrder2.Text" xml:space="preserve">
+  <data name="BtnTimelineOrder2.Text" xml:space="preserve">
     <value>随机</value>
   </data>
   <data name="BtnInfinityOrder.Text" xml:space="preserve">
@@ -231,9 +222,6 @@
   <data name="BtnProviderBing.Text" xml:space="preserve">
     <value>Microsoft Bing - 每天发现一个新地方</value>
   </data>
-  <data name="BtnProviderCoolapk.Text" xml:space="preserve">
-    <value>酷安 - 发现科技新生活</value>
-  </data>
   <data name="BtnProviderInfinity.Text" xml:space="preserve">
     <value>Infinity - 365天精选壁纸</value>
   </data>
@@ -242,6 +230,9 @@
   </data>
   <data name="BtnProviderOneplus.Text" xml:space="preserve">
     <value>OnePlus - Shot on OnePlus</value>
+  </data>
+  <data name="BtnProviderTimeline.Text" xml:space="preserve">
+    <value>拾光 - 时光如歌，岁月如诗</value>
   </data>
   <data name="BtnProviderYmyouli.Text" xml:space="preserve">
     <value>一梦幽黎 - 本站资源准备历时数年</value>
@@ -266,6 +257,15 @@
   </data>
   <data name="BtnSetLock.Text" xml:space="preserve">
     <value>用作锁屏背景</value>
+  </data>
+  <data name="BtnTimelineCate.Text" xml:space="preserve">
+    <value>类别</value>
+  </data>
+  <data name="BtnTimelineCate1.Text" xml:space="preserve">
+    <value>随机</value>
+  </data>
+  <data name="BtnTimelineCate2.Text" xml:space="preserve">
+    <value>风光摄影</value>
   </data>
   <data name="BtnVolumnOff.Text" xml:space="preserve">
     <value>关闭声音</value>
@@ -336,8 +336,8 @@
   <data name="Provider_bing" xml:space="preserve">
     <value>Microsoft Bing</value>
   </data>
-  <data name="Provider_coolapk" xml:space="preserve">
-    <value>酷安</value>
+  <data name="Provider_timeline" xml:space="preserve">
+    <value>拾光</value>
   </data>
   <data name="Provider_daihan" xml:space="preserve">
     <value>呆憨API</value>
@@ -390,8 +390,8 @@
   <data name="Slogan_bing" xml:space="preserve">
     <value>每天发现一个新地方</value>
   </data>
-  <data name="Slogan_coolapk" xml:space="preserve">
-    <value>发现科技新生活</value>
+  <data name="Slogan_timeline" xml:space="preserve">
+    <value>时光如歌，岁月如诗</value>
   </data>
   <data name="Slogan_daihan" xml:space="preserve">
     <value>随机二次元ACG图片</value>
