--- a/Strings/Resources.resw
+++ b/Strings/Resources.resw
@@ -436,7 +436,7 @@
     <value>随机二次元图片</value>
   </data>
   <data name="Slogan_ymyouli" xml:space="preserve">
-    <value>本站资源准备历时数年</value>
+    <value>8K优质壁纸资源</value>
   </data>
   <data name="BtnYmyouliCol127.Text" xml:space="preserve">
     <value>4K图片 - 游戏动漫场景</value>
